--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,16 +1,26 @@
 {{ define "main" }}
-<h1>You look a bit lost there buckaroo</h1>
+<h1>😬 Page Not Found</h1>
+<p>But these gifs go hard tho..</p>
 
 <script>
     // I couldn't find a better way to do this :(
     // Copilot (the job stealer) couldn't help me 
 
-    const gifAmount = 15;
-    var gifNumber = Math.floor(Math.random() * gifAmount) + 1;
+    const gifAmount = 18;
+    var gifNumber = Math.floor(Math.random() * gifAmount + 1) + 1;
+
+    // Secret gif for lucky people
+    if (gifNumber === gifAmount + 1) {
+        var gifNumber = Math.floor(Math.random() * 1000) + 1;
+        if (gifNumber !== 69) { // nice
+            gifNumber = Math.floor(Math.random() * gifAmount) + 1;
+        }
+    }
 
     var gif = document.createElement('img');
+    gif.src = `/404_gifs/${gifNumber}.gif`;
     gif.style.width = '100%';
-    gif.src = '/404_gifs/' + gifNumber + '.gif';
+
     document.body.appendChild(gif);
 </script>
 {{ end }}
