--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,2 +1,2 @@
 <hr>
-<sub>🛠️ <a href="https://github.com/BjarneVerschorre/bjarne.verschorre.be" target="_blank" rel="noopener">Source Code</a></sub><sub>🔐 <a href="/pgp.txt" target="_blank" rel="noopener">PGP Key</a></sub><sub>📄 <a href="/index.xml" target="_blank" rel="noopener">RSS Feed</a></sub>
+<sub>🛠️ <a href="https://github.com/BjarneVerschorre/bjarne.verschorre.be" target="_blank" rel="noopener">Source Code</a></sub><sub>🔐 <a href="/pgp.txt" target="_blank" rel="noopener">PGP Key</a></sub><sub>📄 <a href="/blog/index.xml" target="_blank" rel="noopener">RSS Feed</a></sub>
