Changed folder name

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
 <h1>😬 Page Not Found</h1>
 <p>But this gif goes hard tho..</p>
-<script src="/scripts/random_404_gif.js"></script>
+<script src="/js/random_404_gif.js"></script>
 {{ end }}
