Displaying Button Now

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,10 +8,11 @@ header {
     }
 }
 
-#friends img {
+.friend-button {
     height: 31px;
     width: 88px;
     margin-right: 5px;
+    margin-bottom: 0px;
 }
 
 blockquote {
