--- a/layouts/partials/head/js.html
+++ b/layouts/partials/head/js.html
@@ -1,4 +1,4 @@
-{{- with resources.Get "js/blog_search.js" }}
+{{- with resources.Get "js/search_bar.js" }}
   {{- if eq hugo.Environment "development" }}
     {{- with . | js.Build }}
       <script src="{{ .RelPermalink }}"></script>
