--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,10 @@
+@media (prefers-color-scheme:dark) {
+    :root {
+        --nc-bg-2: #1111116c;
+        --nc-bg-3: #2222229d;
+    }
+}
+
 header {
     padding-bottom: 15px;
     padding-top: 15px;
@@ -6,6 +13,12 @@ header {
         width: 30px;
         margin: 0;
     }
+}
+
+body {
+
+    background-image: url("/imgs/back.svg");
+    background-color: #000000;
 }
 
 .friend-button {
