--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,3 +1,10 @@
 {{ define "main" }}
+
+  <blockquote class="home-quote">
+    <p class="home-quote__quote">“An idiot admires complexity, a genius admires simplicity.”</p>
+    <p class="home-quote__author">– Terry A. Davis</p>
+  </blockquote>
+  <script src="/js/randomize_quote.js"></script>
+
   {{ .Content }}
 {{ end }}
