--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,2 +1,2 @@
 <hr>
-{{ range .Site.Data.footer_links }}<sub>{{.emoji}} <a href="{{ .link }}" target="_blank" rel="noopener">{{ .text }}</a></sub>{{ end }}
+{{ range .Site.Data.footer_links }}<sub class="footer__item">{{.emoji}} <a href="{{ .link }}" target="_blank" rel="noopener">{{ .text }}</a></sub>{{ end }}
