--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,9 @@
 <h1>
-    <img src="/favicon.ico" alt="icon">
+    <img src="/favicon.ico" alt="icon" class="website-icon">
     {{ site.Title }}
 </h1>
 <nav>
     <a href="/">Home</a> /
     <a href="/blog/">Blog</a> /
-    <!-- <a href="/admin/">Admin Login</a> / -->
     <a href="https://github.com/BjarneVerschorre" target="_blank" rel="noopener noreferrer">GitHub↗</a>
 </nav>
