--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,17 +1,8 @@
 {{ define "main" }}
-  <article id="{{.File}}">
-    <h1>{{ .Title }}</h1>
-    {{partial "post_description.html" .}}
-    <hr>
-  </article>
+  {{partial "post-preview.html" .}}
+  <hr>
+  
   {{ .Content }}
   
-  <section class="navigator">
-      {{ with .Prev }}
-      <a href="{{ .RelPermalink }}">← {{ .Title }}</a>
-      {{ end }}
-      {{ with .Next }}
-      <a href="{{ .RelPermalink }}">{{ .Title }} →</a>
-    </section>
-    {{ end }}
+  {{partial "post-navigator.html" .}}
 {{ end }}
