--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-  {{partial "post-preview.html" .}}
+  <article class="post-preview lastest-post" id="{{.File}}">
+    <h2 class="post-preview__title"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
+    {{partial "post_description.html" .}}
   <hr>
   
   {{ .Content }}
