--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,12 @@
 {{ define "main" }}
 <h1>😬 Page Not Found</h1>
-<p>But this gif goes hard tho..</p>
-<script src="/js/random_404_gif.js"></script>
+<p>Sorry, the page you are looking for does not exist. (cringe)</p>
+<hr>
+
+<button onclick="refreshGif()">Refresh GIF</button>
+<button onclick="openRandomWebsite()">Random Website↗</button>
+
+<img class="gif-404" id="gif-404" src="" alt="Random GIF">
+<script src="/js/404.js"></script>
+
 {{ end }}
