Hid the buttons for ppl with JS disabled

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,10 +3,10 @@
 <p>Sorry, the page you are looking for does not exist. (cringe)</p>
 <hr>
 
-<button onclick="refreshGif()">Refresh GIF</button>
-<button onclick="openRandomWebsite()">Random Website↗</button>
+<section id="buttons">
+</section>
 
-<img class="gif-404" id="gif-404" src="" alt="Random GIF">
+<img class="gif-404" id="gif-404" src="/404_gifs/20.gif" alt="Random GIF">
 <script src="/js/404.js"></script>
 
 {{ end }}
