--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,5 +13,8 @@
   <footer>
     {{ partial "footer.html" . }}
   </footer>
+  <!-- 100% privacy-first analytics -->
+<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 </html>
