Changed sup to small
More correct this way

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -70,7 +70,7 @@ blockquote.home-quote {
         margin-left: 10px;
         margin-bottom: 0px;
 
-        sup {
+        small {
             margin-right: 10px;
         }
     }
