Added line-height to balance everything

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -71,6 +71,7 @@ blockquote.home-quote {
     }
 
     .post-preview__metadata {
+        line-height: 18px;
         margin-left: 10px;
         margin-bottom: 0px;
 
