--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
     {{ partial "footer.html" . }}
   </footer>
   <!-- 100% privacy-first analytics -->
-  <script async defer src="https://sa.bjarne.verchorre.be/latest.js"></script>
-  <noscript><img src="https://sa.bjarne.verchorre.be/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+  <script async defer src="https://sa.bjarne.verschorre.be/latest.js"></script>
+  <noscript><img src="https://sa.bjarne.verschorre.be/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 </html>
