--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,8 +3,9 @@
     <h2 class="post-preview__title"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
     {{partial "post_description.html" .}}
   <hr>
-  
+  {{ with .Params.external_url}}
+    🔗 <a class="post__external_url" href="{{.}}">{{.}}</a>
+  {{ end }}
   {{ .Content }}
-  
   {{partial "post-navigator.html" .}}
 {{ end }}
