--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,8 +12,8 @@ header {
     margin-bottom: 15px;
 
     img.website-icon {
-        height: 30px;
-        width: 30px;
+        height: 30px !important;
+        width: 30px !important;
         margin: 0;
     }
 }
